--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,144 @@
+header {
+  background-color: rgb(0, 0, 0);
+  color: white;
+}
+header .navbar {
+  padding: 2rem;
+}
+header .navbar .navbar-brand {
+  font-family: "Kay Pho Du", serif;
+  font-size: 1.5em;
+  color: rgba(255, 0, 0, 0.637);
+  text-decoration: none;
+}
+header .navbar .navbar-nav .nav-link {
+  color: white;
+  transition: color 0.3s;
+}
+header .navbar .navbar-nav .nav-link.active {
+  color: rgba(255, 0, 0, 0.637);
+}
+header .navbar .navbar-nav .nav-link:hover {
+  color: rgba(255, 0, 0, 0.637);
+}
 
+body {
+  font-family: "Bebas", sans-serif;
+  color: white;
+  background-color: rgb(24, 24, 24);
+  margin: 0;
+  padding: 0;
+  line-height: 1.6;
+}
+
+h1, h2, h3, h4 {
+  margin: 1;
+  font-family: "Kay Pho Du", serif;
+  color: rgba(255, 0, 0, 0.637);
+}
+
+footer {
+  background-color: rgb(0, 0, 0);
+  color: white;
+  padding: 20px;
+  text-align: center;
+  font-family: "Bebas", sans-serif;
+}
+footer p {
+  margin-bottom: 15px;
+  font-size: 1.1em;
+  font-weight: 300;
+}
+footer .boton {
+  background-color: rgba(255, 0, 0, 0.637);
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 1em;
+  cursor: pointer;
+  transition: background-color 0.3s, transform 0.3s;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 8px;
+  display: block;
+}
+@media (max-width: 576px) {
+  img {
+    max-width: 100%;
+  }
+}
+@media (min-width: 577px) and (max-width: 768px) {
+  img {
+    max-width: 90%;
+  }
+}
+@media (min-width: 769px) and (max-width: 992px) {
+  img {
+    max-width: 80%;
+  }
+}
+@media (min-width: 993px) {
+  img {
+    max-width: 70%;
+  }
+}
+
+.profile-image {
+  max-width: 100%;
+  height: auto;
+  border-radius: 50%;
+  display: block;
+}
+@media (max-width: 576px) {
+  .profile-image {
+    max-width: 100%;
+  }
+}
+@media (min-width: 577px) and (max-width: 768px) {
+  .profile-image {
+    max-width: 90%;
+  }
+}
+@media (min-width: 769px) and (max-width: 992px) {
+  .profile-image {
+    max-width: 80%;
+  }
+}
+@media (min-width: 993px) {
+  .profile-image {
+    max-width: 70%;
+  }
+}
+
+.header-image {
+  max-width: 100%;
+  height: auto;
+  border-radius: 0;
+  display: block;
+}
+@media (max-width: 576px) {
+  .header-image {
+    max-width: 100%;
+  }
+}
+@media (min-width: 577px) and (max-width: 768px) {
+  .header-image {
+    max-width: 90%;
+  }
+}
+@media (min-width: 769px) and (max-width: 992px) {
+  .header-image {
+    max-width: 80%;
+  }
+}
+@media (min-width: 993px) {
+  .header-image {
+    max-width: 70%;
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
