--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,1 +1,38 @@
 @import "variables";
+@import "mixins";
+@import "header";
+@import "main";
+@import "footer";
+
+p {
+    // Estilos base para los párrafos
+    font-family: $fuente-principal;
+    font-size: 1rem;
+    line-height: 1.6;
+    color: $text-color;
+    margin: $margin;
+    padding: $padding;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+
+    &:hover {
+        color: $hover-color;
+        transform: scale(1.05);
+        transition: all 0.3s ease;
+    }
+
+    @media screen and (min-width: $breakpoint-sm) {
+        font-size: 1.1rem;
+    }
+
+    @media screen and (min-width: $breakpoint-md) {
+        font-size: 1.2rem;
+    }
+
+    @media screen and (min-width: $breakpoint-lg) {
+        font-size: 1.3rem;
+    }
+
+    @media screen and (min-width: $breakpoint-xl) {
+        font-size: 1.4rem;
+    }
+}
